@@ -1,3 +1,5 @@
+21-Mar-2013 Added C.OSXAppBundle module type, for creating the directory structure for an OSX application bundle, i.e. <name>.app/Contents/MacOS.
+
 21-Mar-2013 Changed Opus.Core.BaseOptionCollection.FinalizeOptions to take a DependencyNode rather than a Target.
 
 08-Mar-2013 Adding ObjectiveCTest1 and CocoaTest1 test packages.
